--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link href='https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
         <link href="css/styles.css" rel="stylesheet" type="text/css">
         <title>Dan's Pizza</title>
     </head>
     <body>
+        <div class="main-header">
+            <nav class="navbar mynav navbar-fixed-top">
+                <div class="container">
+                    <div class="navbar-header">
+                    </div>
+                    <div class="nav-bar">
+                          <div class="nav-bar-links">
+                              <a href="#home">Home</a>
+                              <a href="#about">About</a>
+                              <a href="#menu">Menu</a>
+                              <a href="#contact">Contact</a>
+                          </div>
+                </div>
+            
+            </nav>
+            <div id="video" class="d-flex flex-wrap justify-content-center">
+                <video autoplay muted loop src="/images/bg-video.mp4"></video>
+            </div>
+        </div>
 
     </body>
     <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
