Add class banner

--- a/index.html
+++ b/index.html
@@ -26,6 +26,19 @@
             </nav>
             <div id="video" class="d-flex flex-wrap justify-content-center">
                 <video autoplay muted loop src="/images/bg-video.mp4"></video>
+        </div>
+        <div class="banner" id="banner">
+            <div class="bg-overlay">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12">
+                            <div class="banner-text">
+                                <h2>Welcome <span>To Dan's</span> Pizza Place</h2>
+                                <a href="#buy" class="banner-button">Order Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
 
