Add about us section

--- a/index.html
+++ b/index.html
@@ -41,6 +41,20 @@
                 </div>
             </div>
         </div>
+        <!--about us section-->
+        <div class="about" id="about">
+            <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
+                  <h3>About Us</h3>
+                </div>
+                  <div class="about-text"><br>
+                    <p>It all started in 2010. Our first store was opened in Mombasa.Our Pizza stores have opened since. Since we opened our first store in 2010, we’ve been making our thin crust pizza from scratch when you order it.   And we still use stone hearth ovens. That’s one of the reasons our unique pizzas are worth the wait! We pride ourselves in offering you the very best pizza with a side of our famous House dressing.</p>
+                  </div>
+            </div>
+            </div>
+        </div>
+        
 
     </body>
     <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
