--- a/index.html
+++ b/index.html
@@ -54,6 +54,88 @@
             </div>
             </div>
         </div>
+         <!-- Menu Start -->
+        <section class="py-5" id="menu" style="height: 100;">
+        <div class="container my-5">
+          <div class="row parent-container">
+            <div class="col-md-12 text-center menu">
+                <h3>Menu</h3>
+              </div>
+            <!-- menu item -->
+            <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
+              <div class="item-container">
+                <img src="/images/bbq-chicken.jpg" class="img-fluid img-thumbnail item-img"
+                  alt="menu item">
+                <a href="/images/bbq-chicken.jpg">
+                  <h1 class="text-uppercase item-link px-3">Chicken BBQ</h1>
+                </a>
+  
+              </div>
+            </div>
+            <!-- menu item -->
+            <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
+              <div class="item-container">
+                <img src="/images/beef.jpeg" class="img-fluid img-thumbnail item-img"
+                  alt="menu item">
+                <a href="/images/beef.jpeg">
+                  <h1 class="text-uppercase item-link px-3">BEEF</h1>
+                </a>
+  
+              </div>
+            </div>
+  
+            <!-- menu item -->
+            <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
+              <div class="item-container">
+                <img src="/images/chad-montano-MqT0asuoIcU-unsplash.jpg" class="img-fluid img-thumbnail item-img"
+                  alt="menu item">
+                <a href="/images/chad-montano-MqT0asuoIcU-unsplash.jpg ">
+                  <h1 class="text-uppercase item-link px-3">CHAD-MONTANO</h1>
+                </a>
+  
+              </div>
+            </div>
+  
+            <!-- menu item -->
+            <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
+              <div class="item-container">
+                <img src="/images/eggplant.jpg" class="img-fluid img-thumbnail item-img"
+                  alt="menu item">
+                <a href="/images/eggplant.jpg">
+                  <h1 class="text-uppercase item-link px-3">EGG PLANT PIZZA</h1>
+                </a>
+  
+              </div>
+            </div>
+  
+            <!-- menu item -->
+            <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
+              <div class="item-container">
+                <img src="/images/engin-akyurt-IfAb0bjhHlc-unsplash.jpg" class="img-fluid img-thumbnail item-img"
+                  alt="menu item">
+                <a href="/images/engin-akyurt-IfAb0bjhHlc-unsplash.jpg">
+                  <h1 class="text-uppercase item-link px-3">CORIANDA PIZZA</h1>
+                </a>
+  
+              </div>
+            </div>
+  
+            <!-- menu item -->
+            <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
+              <div class="item-container">
+                <img src="/images/hawaiian.jpg" class="img-fluid img-thumbnail item-img"
+                  alt="menu item">
+                <a href="/images/hawaiian.jpg">
+                  <h1 class="text-uppercase item-link px-3">HAWAIIAN PIZZA</h1>
+                </a>
+  
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+  
+      <!-- Menu Ends -->
         
 
     </body>
