Add toppings selection section

--- a/index.html
+++ b/index.html
@@ -136,7 +136,35 @@
       </section>
   
       <!-- Menu Ends -->
-        
+      <section id="selections" class="order">
+          <div class="container" id="buy">
+            <h3>Order</h3>
+            <div class="row">
+                <div class="col-md-4">
+                    <!-- title -->
+                    <div class="row">
+                     <div class="col">
+                        <h2 class="main-color text-uppercase">toppings</h2>
+                     </div>
+                    </div>
+                    <!-- end of title -->
+
+                   <!-- toppings -->
+                   <label for="toppings">Select Your favourite Toppings</label>
+                   <select id="toppings" class="custom-select custom-select-md mb-3" required>
+                      <option value=80>Tomato @ sh. 80</option>
+                      <option value=80>Onions @ sh. 80</option>
+                      <option value=80>Mushroom @ sh. 80</option>
+                      <option value=120>Olives @ sh. 120</option>
+                      <option value=120>Pineapple @ sh. 120</option>
+                      <option value=170>Beef Peperoni @ sh. 170</option>
+                      <option value=170>Periperi Chicken @ sh. 170</option>
+                   </select>
+                   <!-- end of toppings -->
+                </div>
+            </div>
+          </div>
+      </section> 
 
     </body>
     <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
