--- a/index.html
+++ b/index.html
@@ -161,7 +161,14 @@
                       <option value=170>Periperi Chicken @ sh. 170</option>
                    </select>
                    <!-- end of toppings -->
-                </div>
+                   <!--crust-->
+                   <label for="crust">Select Your preferred crust:</label>
+                   <select id="crusts" class="custom-select custom-select-md mb-3" style="width: 200px;" required>
+                        <option value=100>Thin Crust @ Ksh. 100</option>
+                        <option value=150>Thick Crust @ Ksh. 150</option>
+                        <option value=180>FlatBread Crust @ sh. 180</option>
+                        <option value=280>Custom Crust @ sh. 280</option>
+                      </select>
             </div>
           </div>
       </section> 
