--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                     <!-- end of title -->
 
                    <!-- toppings -->
-                   <label for="toppings">Select Your favourite Toppings</label>
+                   <label for="toppings">Choose your favourite Toppings</label>
                    <select id="toppings" class="custom-select custom-select-md mb-3" required>
                       <option value=80>Tomato @ sh. 80</option>
                       <option value=80>Onions @ sh. 80</option>
@@ -162,13 +162,23 @@
                    </select>
                    <!-- end of toppings -->
                    <!--crust-->
-                   <label for="crust">Select Your preferred crust:</label>
+                   <label for="crust">Choose your preferred crust:</label>
                    <select id="crusts" class="custom-select custom-select-md mb-3" style="width: 200px;" required>
                         <option value=100>Thin Crust @ Ksh. 100</option>
                         <option value=150>Thick Crust @ Ksh. 150</option>
                         <option value=180>FlatBread Crust @ sh. 180</option>
                         <option value=280>Custom Crust @ sh. 280</option>
-                      </select>
+                   </select>
+                   <!--end of crust-->
+                   <!--sizes-->
+                   <label for="sizes">Chose your preferred Size:</label>
+                   <select id="sizes" class="custom-select custom-select-md mb-3" required>
+                      <option value=400>Regular</option>
+                      <option value=800>Medium</option>
+                      <option value=1200>Large</option>
+                   </select>
+                  <!-- end of sizes -->
+                    
             </div>
           </div>
       </section> 
