--- a/index.html
+++ b/index.html
@@ -178,7 +178,12 @@
                       <option value=1200>Large</option>
                    </select>
                   <!-- end of sizes -->
-                    
+
+                  <!--number of pizzas-->
+                  <label for="number">Number of Pizza's</label>
+                  <input type="number" class="form-controlaceholder="Number of pizzas" min="1"
+                      max="10" required><br>
+                  <button type="submit" class="btn btn-success checkout" id="order">Order</button>"
             </div>
           </div>
       </section> 
