Add order summary section

--- a/index.html
+++ b/index.html
@@ -186,7 +186,21 @@
                   <button type="submit" class="btn btn-success checkout" id="order">Order</button>"
             </div>
           </div>
-      </section> 
+      </section>
+      <div class="row" id="infor">
+          <div class="col">
+              <h1 class="main-color text-uppercase text center" id=summary>Delivery</h1>
+              <div class="d-block">
+                  <button class="deliver btn btn-warning">Make Delivery</button>
+                  <button class="delivernot btn btn-info">Pick up</button>
+              </div>
+          </div>
+      </div>
+      <div class="order-summary" id="sum-order">
+          <h1 class="text-center" id="summary">Order Summary</h1>
+          <h2 class="text-center summary">Your order is as follows:</h2>
+          <ul id="list" class="text-center sum"></ul>
+      </div>
 
     </body>
     <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
