--- a/index.html
+++ b/index.html
@@ -201,6 +201,20 @@
           <h2 class="text-center summary">Your order is as follows:</h2>
           <ul id="list" class="text-center sum"></ul>
       </div>
+      <div class="contact" id="contact">
+        <h3>CONTACTS</h3>
+        <P>Reach us on;</P>
+        <a href="https://www.facebook.com/"><img src="https://img.icons8.com/color/50/000000/facebook-new.png"
+            width="50px" height="50px"></a>
+            
+        <a href="https://web.whatsapp.com/"><img src="https://img.icons8.com/color/48/000000/whatsapp.png"></a>
+        <a href="https://www.instagram.com/accounts/login/"><img
+            src="https://img.icons8.com/color/64/000000/instagram-new.png" width="50px" height="50px"></a>
+            
+        <a href="https://twitter.com/login"><img src="https://img.icons8.com/color/48/000000/twitter.png"></a>
+        <a href="https://www.skype.com/en/"> <img src="https://bit.ly/2StgfXH" width="50px" height="50px"></a>
+        <br><br>
+        © 2021 Copyright Danlon Situma.
 
     </body>
     <script   src="https://code.jquery.com/jquery-3.3.1.min.js"   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="   crossorigin="anonymous"></script>
