--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link href='https://fonts.googleapis.com/css?family=Oleo+Script+Swash+Caps:400,700' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+        <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
         <link href="css/styles.css" rel="stylesheet" type="text/css">
         <title>Dan's Pizza</title>
     </head>
@@ -25,7 +26,7 @@
             
             </nav>
             <div id="video" class="d-flex flex-wrap justify-content-center">
-                <video autoplay muted loop src="/images/bg-video.mp4"></video>
+                <video autoplay muted loop src="./images/bg-video.mp4"></video>
         </div>
         <div class="banner" id="banner">
             <div class="bg-overlay">
@@ -64,9 +65,9 @@
             <!-- menu item -->
             <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
               <div class="item-container">
-                <img src="/images/bbq-chicken.jpg" class="img-fluid img-thumbnail item-img"
+                <img src="./images/bbq-chicken.jpg" class="img-fluid img-thumbnail item-img"
                   alt="menu item">
-                <a href="/images/bbq-chicken.jpg">
+                <a href="./images/bbq-chicken.jpg">
                   <h1 class="text-uppercase item-link px-3">Chicken BBQ</h1>
                 </a>
   
@@ -75,9 +76,9 @@
             <!-- menu item -->
             <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
               <div class="item-container">
-                <img src="/images/beef.jpeg" class="img-fluid img-thumbnail item-img"
+                <img src="./images/beef.jpeg" class="img-fluid img-thumbnail item-img"
                   alt="menu item">
-                <a href="/images/beef.jpeg">
+                <a href="./images/beef.jpeg">
                   <h1 class="text-uppercase item-link px-3">BEEF</h1>
                 </a>
   
@@ -87,9 +88,9 @@
             <!-- menu item -->
             <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
               <div class="item-container">
-                <img src="/images/chad-montano-MqT0asuoIcU-unsplash.jpg" class="img-fluid img-thumbnail item-img"
+                <img src="./images/chad-montano-MqT0asuoIcU-unsplash.jpg" class="img-fluid img-thumbnail item-img"
                   alt="menu item">
-                <a href="/images/chad-montano-MqT0asuoIcU-unsplash.jpg ">
+                <a href="./images/chad-montano-MqT0asuoIcU-unsplash.jpg ">
                   <h1 class="text-uppercase item-link px-3">CHAD-MONTANO</h1>
                 </a>
   
@@ -99,9 +100,9 @@
             <!-- menu item -->
             <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
               <div class="item-container">
-                <img src="/images/eggplant.jpg" class="img-fluid img-thumbnail item-img"
+                <img src="./images/eggplant.jpg" class="img-fluid img-thumbnail item-img"
                   alt="menu item">
-                <a href="/images/eggplant.jpg">
+                <a href="./images/eggplant.jpg">
                   <h1 class="text-uppercase item-link px-3">EGG PLANT PIZZA</h1>
                 </a>
   
@@ -111,9 +112,9 @@
             <!-- menu item -->
             <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
               <div class="item-container">
-                <img src="/images/engin-akyurt-IfAb0bjhHlc-unsplash.jpg" class="img-fluid img-thumbnail item-img"
+                <img src="./images/engin-akyurt-IfAb0bjhHlc-unsplash.jpg" class="img-fluid img-thumbnail item-img"
                   alt="menu item">
-                <a href="/images/engin-akyurt-IfAb0bjhHlc-unsplash.jpg">
+                <a href="./images/engin-akyurt-IfAb0bjhHlc-unsplash.jpg">
                   <h1 class="text-uppercase item-link px-3">CORIANDA PIZZA</h1>
                 </a>
   
@@ -123,9 +124,9 @@
             <!-- menu item -->
             <div class="col-10 mx-auto col-sm-6 col-lg-4 my-3">
               <div class="item-container">
-                <img src="/images/hawaiian.jpg" class="img-fluid img-thumbnail item-img"
+                <img src="./images/hawaiian.jpg" class="img-fluid img-thumbnail item-img"
                   alt="menu item">
-                <a href="/images/hawaiian.jpg">
+                <a href="./images/hawaiian.jpg">
                   <h1 class="text-uppercase item-link px-3">HAWAIIAN PIZZA</h1>
                 </a>
   
@@ -181,8 +182,8 @@
 
                   <!--number of pizzas-->
                   <label for="number">Number of Pizza's</label>
-                  <input type="number" class="form-controlaceholder="Number of pizzas" min="1"
-                      max="10" required><br>
+                  <input type="number" class="form-control" id="number" placeholder="Number of pizzas" min="1"
+                      max="10" required>
                   <button type="submit" class="btn btn-success checkout" id="order">Order</button>"
             </div>
           </div>
@@ -199,7 +200,8 @@
       <div class="order-summary" id="sum-order">
           <h1 class="text-center" id="summary">Order Summary</h1>
           <h2 class="text-center summary">Your order is as follows:</h2>
-          <ul id="list" class="text-center sum"></ul>
+          <ul id="list" class="text-center sum">
+          </ul>  
       </div>
       <div class="contact" id="contact">
         <h3>CONTACTS</h3>
@@ -219,8 +221,8 @@
     </body>
     <script src="js/jquery-3.4.1.js"></script>
     <script src="js/all.js"></script>
-    <script src="js/bootstrap.min.js"></script>
     <script src="js/bootstrap.bundle.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <script src="js/jquery.magnific-popup.js"></script>
     <script src="js/jquery.min.js"></script>
     <script src="js/scripts.js"></script>
